--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,14 @@ orjson>=3.9.0          # Ускорение JSON операций
 httpx>=0.24.0          # Улучшение HTTP запросов
 pyyaml>=6.0            # Работа с конфигурационными файлами
 
+# Логирование
+loguru>=0.7.0          # Современная система логирования с цветным выводом
+
 # Встроенные модули Python (не требуют установки):
 # - tkinter (GUI Framework)
 # - json (работа с JSON) - заменен на orjson
 # - pathlib (работа с путями)
+# - functools (декораторы и утилиты)
 # - logging (логирование)
 # - datetime (даты и время)
 # - os, sys, subprocess (системные операции)
